--- a/Doctor_App/app/src/main/res/layout/activity_info.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_info.xml
@@ -22,11 +22,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        app:strokeColor="@color/colorPrimaryDark"
+        app:strokeWidth="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_marginHorizontal="1dp"
+            android:layout_marginVertical="1dp">
 
             <TextView
                 android:id="@+id/textView1"
