--- a/Doctor_App/app/src/main/res/values/colors.xml
+++ b/Doctor_App/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#00574B</color>
+    <color name="colorPrimary">#0083CC</color>
+    <color name="colorPrimaryDark">#006989</color>
+    <color name="colorAccent">#007090</color>
     <color name="white">#FFFFFF</color>
-    <color name="dark_gray">#787878</color>
+    <color name="dark_gray">#A3BAC3</color>
+    <color name="pattern_lock">#0083CC</color>
+    <color name="darkest_gray">#626262</color>
 </resources>
