Changed design to agreed layout

--- a/DiabetesApp/app/src/main/res/layout/activity_camera_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_camera_sugar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appBlue"
     tools:context=".CameraSugar">
 
     <SurfaceView
@@ -33,7 +34,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
-        android:src="@drawable/ic_check_white_48dp"
+        android:src="@drawable/ic_check_black_48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +46,7 @@
         android:layout_marginStart="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
-        android:src="@drawable/ic_arrow_back_white_48dp"
+        android:src="@drawable/ic_arrow_back_black_48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
