--- a/DiabetesApp/app/src/main/res/drawable/button_background_48dp.xml
+++ b/DiabetesApp/app/src/main/res/drawable/button_background_48dp.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <stroke android:color="@color/colorPrimaryDark" android:width="5dp" />
-            <solid android:color="@color/colorPrimaryDark"/>
+            <stroke android:color="@color/appWhite" android:width="5dp" />
+            <solid android:color="@color/appWhite"/>
             <size android:width="48dp" android:height="48dp"/>
         </shape>
     </item>
