--- a/DiabetesApp/app/src/main/res/drawable/rect.xml
+++ b/DiabetesApp/app/src/main/res/drawable/rect.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/listview_background_shape">
-    <stroke android:width="2dp" android:color="#ffff00ff" />
+    <stroke android:width="2dp" android:color="@color/appWhite" />
     <padding android:left="2dp"
         android:top="2dp"
         android:right="2dp"
