--- a/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input__password.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
+    android:background="@color/appBlue"
     tools:context=".InputPassword">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="0083CC"
         app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
