--- a/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
+    android:background="@color/appBlue"
     tools:context=".InputPressureSugar">
 
     <androidx.constraintlayout.widget.Guideline
@@ -73,7 +73,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background_96dp"
         android:padding="20dp"
-        android:src="@drawable/ic_camera_alt_white_96dp"
+        android:src="@drawable/ic_camera_alt_black_96dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
@@ -86,7 +86,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
-        android:src="@drawable/ic_check_white_48dp"
+        android:src="@drawable/ic_check_black_48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -98,7 +98,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
-        android:src="@drawable/ic_arrow_back_white_48dp"
+        android:src="@drawable/ic_arrow_back_black_48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
