--- a/DiabetesApp/app/src/main/res/values/colors.xml
+++ b/DiabetesApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="appWhite">#EAEBED</color>
+    <color name="appBlue"> #0083CC</color>
 </resources>
