Update blood sugar graph

--- a/Doctor_App/app/src/main/res/layout/activity_info.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_info.xml
@@ -97,10 +97,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/chart_summary"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/darkest_gray"
                 app:layout_constraintBottom_toTopOf="@+id/startDate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -141,11 +140,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/average_bg"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/darkest_gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
