Improved graphs axes

--- a/Doctor_App/app/src/main/res/layout/info_list_item.xml
+++ b/Doctor_App/app/src/main/res/layout/info_list_item.xml
@@ -33,6 +33,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@color/design_default_color_error" />
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:color/transparent" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
