will only upload data when online, stored internally otherwise

--- a/DiabetesApp/app/src/main/res/values/colors.xml
+++ b/DiabetesApp/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="dark_gray">#A3BAC3</color>
     <color name="pattern_lock">#0083CC</color>
     <color name="darkest_gray">#626262</color>
+    <color name="red">#FF1111</color>
 </resources>
