--- a/DiabetesApp/app/src/main/res/layout/activity_main.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_main.xml
@@ -80,11 +80,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         app:boxBackgroundColor="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
-        app:layout_constraintVertical_bias="0.2">
+        app:layout_constraintVertical_bias="0.05">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/username"
