--- a/DiabetesApp/app/src/main/res/values/colors.xml
+++ b/DiabetesApp/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pattern_lock">#0083CC</color>
     <color name="darkest_gray">#626262</color>
     <color name="red">#FF1111</color>
+    <color name="light_red">#FF9999</color>
 </resources>
