Added patient logout

--- a/backend/src/views/layouts/main.handlebars
+++ b/backend/src/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <a href="/">
     <div id="left-nav">
       <div id="menu-title">
-        Dashboard
+        <img src="/images/white-logo.png" height="18px" width="auto">
       </div>
   </a>
 
@@ -35,6 +35,12 @@
   <a href="/addDoctorToClinics">
     <div class="action-link">
       Join a Clinic
+    </div>
+  </a>
+
+  <a href="/editProfile">
+    <div class="action-link">
+      Edit Profile
     </div>
   </a>
 
