--- a/DiabetesApp/app/src/main/res/values/colors.xml
+++ b/DiabetesApp/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorAccent">#007090</color>
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#A3BAC3</color>
-    <color name="pattern_lock">#0083CC</color>
+    <color name="pattern_lock">#C6E4E3</color>
     <color name="darkest_gray">#626262</color>
     <color name="red">#FF1111</color>
     <color name="light_red">#FF9999</color>
