--- a/DiabetesApp/app/src/main/res/drawable/button_background_48dp.xml
+++ b/DiabetesApp/app/src/main/res/drawable/button_background_48dp.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <stroke android:color="@color/appWhite" android:width="5dp" />
-            <solid android:color="@color/appWhite"/>
-            <size android:width="48dp" android:height="48dp"/>
-        </shape>
-    </item>
+    <item android:drawable="@drawable/button_background_pressed_48dp"
+        android:state_pressed="true" />
+    <item android:drawable="@drawable/button_background_focused_48dp"
+        android:state_focused="true" />
+    <item android:drawable="@drawable/button_background_default_48dp" />
 </selector>
