--- a/DiabetesApp/app/src/main/res/drawable/button_background_default_96dp.xml
+++ b/DiabetesApp/app/src/main/res/drawable/button_background_default_96dp.xml
@@ -3,9 +3,9 @@
     android:shape="oval">
     <stroke
         android:width="5dp"
-        android:color="@color/darkest_gray" />
-    <solid android:color="@color/darkest_gray" />
+        android:color="@color/appWhite" />
+    <solid android:color="@color/appWhite" />
     <size
-        android:width="48dp"
-        android:height="48dp" />
+        android:width="96dp"
+        android:height="96dp" />
 </shape>
