--- a/DiabetesApp/app/src/main/res/layout/activity_camera_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_camera_sugar.xml
@@ -18,13 +18,13 @@
         android:id="@+id/myRectangleView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintWidth_percent="0.6"
         android:background="@drawable/rect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.6" />
 
     <ImageButton
         android:id="@+id/enter"
