--- a/DiabetesApp/app/src/main/res/layout/activity_data__enter.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_data__enter.xml
@@ -89,16 +89,15 @@
         app:layout_constraintVertical_bias=".1" />
 
     <ImageButton
-        android:id="@+id/back"
+        android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
-        android:src="@drawable/ic_arrow_back_black_48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_exit_to_app_black_48dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
