--- a/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
@@ -61,7 +61,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.8" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/enterData2"
@@ -97,16 +97,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterData2" />
+        app:layout_constraintTop_toBottomOf="@+id/enterData2"
+        app:layout_constraintVertical_bias="0.1" />
 
     <ImageButton
         android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/button_background_48dp"
         android:padding="10dp"
         android:src="@drawable/ic_check_black_48dp"
