--- a/backend/src/views/inviteDoctor.handlebars
+++ b/backend/src/views/inviteDoctor.handlebars
@@ -13,7 +13,7 @@
   <label for="email">Email:</label>
   <input type="text" name="email" required>
 
-  <input type="hidden" name="inviterID" id="inviteUser" required>
+  <input type="hidden" name="inviterID" id="doctorID" required>
 
   <input type="submit" class="action-submit" name="submit">
 </form>
