--- a/backend/src/views/registerPatient.handlebars
+++ b/backend/src/views/registerPatient.handlebars
@@ -25,7 +25,7 @@
   <label for="password">Password:</label>
   <input type="password" name="password" required>
 
-  <input type="hidden" name="doctorID" id="inviteUser" required>
+  <input type="hidden" name="doctorID" id="doctor-id" required>
 
   <input type="submit" class="action-submit" name="submit">
 </form>
